// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloseIcon Component should render correctly with color #000 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  width: 100%;
  height: 100%;
}

<svg
  aria-labelledby="ID"
  className="c0"
  role="img"
  size={undefined}
  viewBox="0 0 512 512"
>
  <title
    id="ID"
  >
    close
  </title>
  <path
    d="M256 0C114.624 0 0 114.624 0 256s114.624 256 256 256 256-114.624 256-256S397.376 0 256 0zm126.624 337.376l-45.248 45.248L256 301.248l-81.376 81.376-45.248-45.248L210.752 256l-81.376-81.376 45.248-45.248L256 210.752l81.376-81.376 45.248 45.248L301.248 256l81.376 81.376z"
    fill="#000"
  />
</svg>
`;

exports[`CloseIcon Component should render correctly with default props 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  width: 100%;
  height: 100%;
}

<svg
  aria-labelledby="ID"
  className="c0"
  role="img"
  size={undefined}
  viewBox="0 0 512 512"
>
  <title
    id="ID"
  >
    close
  </title>
  <path
    d="M256 0C114.624 0 0 114.624 0 256s114.624 256 256 256 256-114.624 256-256S397.376 0 256 0zm126.624 337.376l-45.248 45.248L256 301.248l-81.376 81.376-45.248-45.248L210.752 256l-81.376-81.376 45.248-45.248L256 210.752l81.376-81.376 45.248 45.248L301.248 256l81.376 81.376z"
    fill="currentColor"
  />
</svg>
`;

exports[`CloseIcon Component should render correctly with size 40 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  width: 40px;
  height: 40px;
}

<svg
  aria-labelledby="ID"
  className="c0"
  role="img"
  size={40}
  viewBox="0 0 512 512"
>
  <title
    id="ID"
  >
    close
  </title>
  <path
    d="M256 0C114.624 0 0 114.624 0 256s114.624 256 256 256 256-114.624 256-256S397.376 0 256 0zm126.624 337.376l-45.248 45.248L256 301.248l-81.376 81.376-45.248-45.248L210.752 256l-81.376-81.376 45.248-45.248L256 210.752l81.376-81.376 45.248 45.248L301.248 256l81.376 81.376z"
    fill="currentColor"
  />
</svg>
`;
